--- a/style.css
+++ b/style.css
@@ -141,8 +141,11 @@ article:after {
 }
 
 article h1 {
-    clip: rect(0 0 0 0);
-    position: absolute;
+   font: bold 100% sans-serif;
+    letter-spacing: 0.5em;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 0.5em; /* Añadido para espacio después del título */
 }
 
 article address {
