--- a/style.css
+++ b/style.css
@@ -32,6 +32,13 @@ span[contenteditable] {
     display: inline-block;
 }
 
+h3 {
+    font: bold 100% sans-serif;
+    letter-spacing: 0.5em;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 0.5em; /* Añadido para espacio después del título */
+}
 /* heading */
 h1 {
     font: bold 100% sans-serif;
@@ -40,6 +47,7 @@ h1 {
     text-transform: uppercase;
     margin-bottom: 0.5em; /* Añadido para espacio después del título */
 }
+
 
 /* table */
 table {
@@ -276,12 +284,12 @@ tr:hover .cut {
     font-size: 60%;
 }
 
-.footer {
-    font: 16px/1 'Open Sans', sans-serif;
-    position: fixed;
-    left: 0;
-    bottom: 5;
-    width: 100%;
-    color: black;
-    text-align: Left;
+h2 {
+    background: #27649d;
+    border-radius: 0.25em;
+    color: #FFF;
+    padding: 0.5em 0;
+    margin-top:50px;
+    width:100%;
+    height:200px;
 }
