--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ span[contenteditable] {
 h3 {
     background: #27649d;
     border-radius: 0.25em;
+    text-align: center;
     color: #FFF;
     margin: 0;
     padding: 0.5em 0;
@@ -291,5 +292,4 @@ h2 {
     padding: 0.5em 0;
     margin-top:50px;
     width:100%;
-    height:200px;
 }
