--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ h3 {
     background: #27649d;
     border-radius: 0.25em;
     text-align: center;
+    font: 14px/1 'Open Sans', sans-serif;
     color: #FFF;
     margin: 0;
     padding: 0.5em 0;
@@ -288,6 +289,7 @@ tr:hover .cut {
 h2 {
     background: #27649d;
     border-radius: 0.25em;
+    font: 12px/1 'Open Sans', sans-serif;
     color: #FFF;
     padding: 0.5em 0;
     margin-top:50px;
