--- a/style.css
+++ b/style.css
@@ -36,14 +36,14 @@ h3 {
     background: #27649d;
     border-radius: 0.25em;
     text-align: center;
-    font: 14px/1 'Open Sans', sans-serif;
+    font: bold 75% sans-serif;
     color: #FFF;
     margin: 0;
     padding: 0.5em 0;
 }
 /* heading */
 h1 {
-    font: bold 100% sans-serif;
+    font: bold 90% sans-serif;
     letter-spacing: 0.5em;
     text-align: center;
     text-transform: uppercase;
@@ -291,7 +291,7 @@ h2 {
     border-radius: 0.25em;
     font: 12px/1 'Open Sans', sans-serif;
     color: #FFF;
-    padding: 0.5em 0;
-    margin-top:50px;
+    padding: 0.5em 0.5em;
+    margin-top:10px;
     width:100%;
 }
