--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ th, td {
 
 th {
     background: #EEE;
+    font: bold;
 }
 
 /* page */
@@ -190,6 +191,7 @@ table.meta td {
 /* table items */
 table.inventory th {
     font-weight: bold;
+    font: bold;
     text-align: left;
 }
 
